--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
        <link rel="stylesheet" href="css/tooltipster-sideTip-light.min.css">
        <!-- Google Fonts -->
        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quattrocento Sans:light,lightitalic,normal,italic,bold,bolditalic">
-   
-</head>
+      </head>
 
 <body>
    <form action="phpexcel.php" method="POST" enctype="multipart/form-data" target="_blank" class="myForm">
@@ -107,7 +106,7 @@
                      </span>
                </label>
                <div class="form-input">
-                  <input type="text" class="form-textbox" name="nama_lengkap" id="nama_lengkap" >
+                  <input type="text" class="form-textbox" name="nama_lengkap" id="nama_lengkap" data-rule-required="true"  />
                </div>
             </li>
             <li class="form-line">
@@ -118,7 +117,8 @@
                      </span>
                </label>
                <div class="form-input">
-                  <input type="text" class="form-textbox" name="nama_panggilan" id="nama_panggilan">
+                  <input type="text" class="form-textbox" name="nama_panggilan" id="nama_panggilan" data-validation="length alphanumeric" 
+                  data-validation-length="3-12" >
                </div>
             </li>
             <li class="form-line">
@@ -152,7 +152,7 @@
                      </span>
                </label>
                <div class="form-input">
-                  <input type="text" class="form-textbox" name="email" id="email">
+                  <input type="email" class="form-textbox" name="email" id="email" required data-parsley-type="email" data-parsley-trigger="keyup">
                   <div class="form-sub-label">
                      Email yang sering digunakan
                   </div>
@@ -765,21 +765,28 @@
          </ul>
       </div>
    </form>
-      <!-- Jquery Offline -->
-      
-      <!-- Jquery Validate -->
+   <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.13.1/jquery.validate.min.js"></script>
+<script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.13.1/additional-methods.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.0/jquery.scrollTo.min.js"></script>
+<script src="js/vendor.js" ></script>
+
+<script src="jqueryform.com.min.js?ver=v2.1.0&id=jqueryform-c69d3d" ></script>
+   <script src="js/jquery.min.js"></script>
+  
+   <!-- <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.17.0/dist/jquery.validate.min.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/additional-methods.min.js"></script> -->
 
       <!-- Tooltipster JS -->
-      <script type="text/javascript" src="js/tooltipster.bundle.min.js"></script>
-     <script
-       src="https://code.jquery.com/jquery-3.3.1.js"
-       integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-       crossorigin="anonymous"></script>
-       <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.17.0/dist/jquery.validate.min.js"></script>
-       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/additional-methods.min.js"></script>
+      <script src="js/tooltipster.bundle.min.js"></script>
+   
      <!-- Main Js -->
     <script src="js/main.js" charset="utf-8"></script>
-   <script>
+   <script type="text/javascript">
+	// start jqueryform initialization
+	// --------------------------------
+	JF.init('#form2');
+
+
       $('#foto_selfie').change(function() {
          var filename = $('#foto_selfie').val().replace(/C:\\fakepath\\/i, '');
          $('#foto_list').addClass("success");
@@ -808,7 +815,6 @@
          $('#dokumen_berharga').click();
       });
 
-      
    </script>
 </body>
 
