to email validate not finish

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                      </button>
                   </div>
                   <div class="form-button-next">
-                     <button type="button" id="nextbtn2" class="next-button">
+                     <button type="button" id="nextbtn2" class="next-button" onclick='checkEmail();' />
                         Next
                      </button>
                   </div>
