--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       </head>
 
 <body>
-   <form action="phpexcel.php" method="POST" enctype="multipart/form-data" target="_blank" class="validate"  name="vform" id="MyForm">
+   <form action="phpexcel.php" method="POST" enctype="multipart/form-data" target="_blank" class="myForm"  name="vform" id="MyForm">
       <div class="form-all">
          <ul class="form-section page-section active" id="form1">
             <li class="form-input-wide">
@@ -90,7 +90,7 @@
                </div>
             </li>
          </ul>
-         <ul class="form-section page-section" id="form2" class="form2">
+         <ul class="form-section page-section" id="form2">
             <li class="form-input-wide">
                <div class="form-header-group">
                   <h3 id="header_2" class="form-header">
@@ -134,20 +134,14 @@
                <div class="form-input">
                   <input type="text" class="form-textbox tooltipster-custom" name="telepon_1" id="telepon_1" title="isi (-) jika tidak ada, Telkom TIDAK wajib" required>
                   
-                  <div class="form-sub-label">
+                  <div class="form-sub-label mb">
                      HP-1 (Diutamakan ada fitur Whats App)
                   </div>
-               </div>
-             
-            </li>
-            <li class="form-line">
-               <label class="form-label form-label-left">&nbsp;</label>
-               <div class="form-input">
                   <input type="text" class="form-textbox" name="telepon_2" id="telepon_2" required> 
                   <div class="form-sub-label">
                      Telpon Rumah Telkom di Utamakan / HP-2
                   </div>
-               </div>
+            </div>
             </li>
             <li class="form-line">
                <label class="form-label form-label-left">
@@ -158,7 +152,7 @@
                </label>
                <div class="form-input">
                   <input type="email" class="form-textbox" name="email" id="email" 
-                  pattern="^([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x22([^\x0d\x22\x5c\x80-\xff]|\x5c[\x00-\x7f])*\x22)(\x2e([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x22([^\x0d\x22\x5c\x80-\xff]|\x5c[\x00-\x7f])*\x22))*\x40([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x5b([^\x0d\x5b-\x5d\x80-\xff]|\x5c[\x00-\x7f])*\x5d)(\x2e([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x5b([^\x0d\x5b-\x5d\x80-\xff]|\x5c[\x00-\x7f])*\x5d))*(\.\w{2,})+$" required>
+                  title="The domain portion of the email address is invalid (the portion after the @)." pattern="^([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x22([^\x0d\x22\x5c\x80-\xff]|\x5c[\x00-\x7f])*\x22)(\x2e([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x22([^\x0d\x22\x5c\x80-\xff]|\x5c[\x00-\x7f])*\x22))*\x40([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x5b([^\x0d\x5b-\x5d\x80-\xff]|\x5c[\x00-\x7f])*\x5d)(\x2e([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x5b([^\x0d\x5b-\x5d\x80-\xff]|\x5c[\x00-\x7f])*\x5d))*(\.\w{2,})+$" required>
                   <div class="validation"></div>
                   <div class="form-sub-label">
                      Email yang sering digunakan
@@ -201,14 +195,9 @@
                </label>
                <div class="form-input">
                   <input type="text" class="form-textbox" name="nama_facebook" id="nama_facebook">
-                  <div class="form-sub-label">
+                  <div class="form-sub-label mb">
                      Nama Facebook
                   </div>
-               </div>
-            </li>
-            <li class="form-line">
-               <label class="form-label form-label-left">&nbsp;</label>
-               <div class="form-input">
                   <input type="text" class="form-textbox" name="email_facebook" id="email_facebook">
                   <div class="form-sub-label">
                      Email Facebook
@@ -367,14 +356,9 @@
                </label>
                <div class="form-input">
                   <input type="text" class="form-textbox" name="sewa" id="sewa">
-                  <div class="form-sub-label">
+                  <div class="form-sub-label mb">
                      Nama tempat sewa Sebelumnnya
                   </div>
-               </div>
-            </li>
-            <li class="form-line">
-               <label class="form-label form-label-left">&nbsp;</label>
-               <div class="form-input">
                   <input type="text" class="form-textbox" name="sewa_atas_nama" id="sewa_atas_nama">
                   <div class="form-sub-label">
                      Atas Nama Siapa..?
