add error border styles form

--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
                </label>
                <div class="form-input">
                   <input type="text" class="form-textbox" name="nama_instagram" id="nama_instagram">
+                  <div class="validation"></div>
                </div>
             </li>
             <li class="form-line">
@@ -222,7 +223,8 @@
                </label>
                <div class="form-input">
                   <input type="text" class="form-textbox" name="nama_twitter" id="nama_twitter">
-               </div>
+                  <div class="validation"></div>  
+            </div>
             </li>
             <li class="form-line">
                <div class="form-button">
@@ -256,7 +258,8 @@
                </label>
                <div class="form-input">
                   <input type="text" class="form-textbox" name="jenis_alat" id="jenis_alat">
-               </div>
+                  <div class="validation"></div>   
+            </div>
             </li>
             <li class="form-line">
                <label class="form-label form-label-left">
@@ -267,7 +270,8 @@
                </label>
                <div class="form-input">
                   <input type="text" class="form-textbox" name="tanggal" id="tanggal">
-               </div>
+                  <div class="validation"></div>   
+            </div>
             </li>
             <li class="form-line">
                <label class="form-label form-label-left">
@@ -278,6 +282,7 @@
                </label>
                <div class="form-input">
                   <input type="text" class="form-textbox" name="acara" id="acara">
+                  <div class="validation"></div>
                </div>
             </li>
             <li class="form-line">
@@ -295,6 +300,7 @@
                         <option value="Kraton, Jogja"> Kraton, Jogja </option>
                         <option value="Denpasar, Bali"> Denpasar, Bali </option>
                      </select>
+                     <div class="validation"></div>
                </div>
             </li>
             <li class="form-line">
@@ -340,6 +346,7 @@
                </label>
                <div class="form-input">
                   <input type="text" class="form-textbox" name="mengetahui_zenon" id="mengetahui_zenon">
+                  <div class="validation"></div>
                   <div class="form-sub-label">
                      jika dari teman, tulis nama teman, jika teman anda member Zenon maka infokan ke-kami (agar cepat approve)
                   </div>
@@ -399,6 +406,7 @@
                </label>
                <div class="form-input">
                   <input type="text" class="form-textbox" name="nama_keluarga" id="nama_keluarga">
+                  <div class="validation"></div>
                   <div class="form-sub-label">
                      Keluarga yang dapat dan atau bersedia menjamin nama baik anda dan siap diminta bantuan saat ada masalah dengan anda
                   </div>
@@ -413,7 +421,8 @@
                </label>
                <div class="form-input">
                   <input type="text" class="form-textbox" name="hubungan_penyewa" id="hubungan_penyewa">
-               </div>
+                  <div class="validation"></div>   
+            </div>
             </li>
             <li class="form-line">
                <label class="form-label form-label-left">
@@ -424,7 +433,8 @@
                </label>
                <div class="form-input">
                   <input type="text" class="form-textbox" name="hp" id="hp">
-               </div>
+                  <div class="validation"></div>   
+            </div>
             </li>
             <li class="form-line">
                <label class="form-label form-label-left">
@@ -435,7 +445,8 @@
                </label>
                <div class="form-input">
                   <input type="text" class="form-textbox" name="alamat_keluarga" id="alamat_keluarga">
-               </div>
+                  <div class="validation"></div>   
+            </div>
             </li>
             <li class="form-line">
                <div class="form-button">
@@ -474,7 +485,8 @@
                </label>
                <div class="form-input">
                   <input type="text" class="form-textbox" name="pekerjaan_sekarang" id="pekerjaan_sekarang">
-               </div>
+                  <div class="validation"></div>   
+            </div>
             </li>
             <li class="form-line">
                <label class="form-label form-label-left">
@@ -485,7 +497,8 @@
                </label>
                <div class="form-input">
                   <input type="text" class="form-textbox" name="nama_tmpt_kerja" id="nama_tmpt_kerja">
-               </div>
+                  <div class="validation"></div>   
+            </div>
             </li>
             <li class="form-line">
                <label class="form-label form-label-left">
@@ -496,7 +509,8 @@
                </label>
                <div class="form-input">
                   <input type="text" class="form-textbox" name="jabatan_kerja" id="jabatan_kerja">
-               </div>
+                  <div class="validation"></div>   
+            </div>
             </li>
             <li class="form-line">
                <label class="form-label form-label-left">
@@ -507,7 +521,8 @@
                </label>
                <div class="form-input">
                   <input type="text" class="form-textbox" name="alamat_tmpt_kerja" id="alamat_tmpt_kerja">
-               </div>
+                  <div class="validation"></div>  
+            </div>
             </li>
             <li class="form-line">
                <label class="form-label form-label-left">
@@ -518,7 +533,8 @@
                </label>
                <div class="form-input">
                   <input type="text" class="form-textbox" name="telepon_tmpt_kerja" id="telepon_tmpt_kerja">
-               </div>
+                  <div class="validation"></div>   
+            </div>
             </li>
             <li class="form-line">
                <div class="form-button">
@@ -541,7 +557,7 @@
                   <p>
                      <span>
                         <strong>
-                           #Alamat tinggal sekaran
+                           #Alamat tinggal sekarang
                         </strong>
                      </span>
                   </p>
@@ -563,7 +579,8 @@
                </label>
                <div class="form-input">
                   <input type="text" class="form-textbox" name="alamat_tinggal_skrng" id="alamat_tinggal_skrng">
-               </div>
+                  <div class="validation"></div>   
+            </div>
             </li>
             <li class="form-line">
                <label class="form-label form-label-left">
@@ -580,7 +597,8 @@
                         <option value="Milik Sendiri"> Milik Sendiri </option>
                         <option value="Lainnya"> Lainnya </option>
                      </select>
-               </div>
+                     <div class="validation"></div>
+                  </div>
             </li>
             <li class="form-line">
                <label class="form-label form-label-left">
@@ -591,7 +609,8 @@
                </label>
                <div class="form-input">
                   <input type="text" class="form-textbox" name="nama_pemilik" id="nama_pemilik">
-               </div>
+                  <div class="validation"></div>  
+            </div>
             </li>
             <li class="form-line">
                <label class="form-label form-label-left">
@@ -602,7 +621,8 @@
                </label>
                <div class="form-input">
                   <input type="text" class="form-textbox" name="telepon_pemilik" id="telepon_pemilik">
-               </div>
+                  <div class="validation"></div>   
+            </div>
             </li>
             <li class="form-line">
                <div class="form-button">
@@ -646,7 +666,8 @@
                         <option value="Sarjana"> Sarjana </option>
                         <option value="Lainnya"> Lainnya </option>
                      </select>
-               </div>
+                     <div class="validation"></div>
+                  </div>
             </li>
             <li class="form-line">
                <label class="form-label form-label-left">
@@ -657,7 +678,8 @@
                </label>
                <div class="form-input">
                   <input type="text" class="form-textbox" name="nama_lembaga" id="nama_lembaga">
-               </div>
+                  <div class="validation"></div>   
+            </div>
             </li>
             <li class="form-line">
                <label class="form-label form-label-left">
@@ -668,7 +690,8 @@
                </label>
                <div class="form-input">
                   <input type="text" class="form-textbox" name="alamat_lembaga" id="alamat_lembaga">
-               </div>
+                  <div class="validation"></div>   
+            </div>
             </li>
             <li class="form-line">
                <label class="form-label form-label-left">
@@ -679,7 +702,8 @@
                </label>
                <div class="form-input">
                   <input type="text" class="form-textbox" name="info_tambahan" id="info_tambahan">
-               </div>
+                  <div class="validation"></div>   
+            </div>
             </li>
             <li class="form-line">
                <div class="form-button">
@@ -714,7 +738,8 @@
                </label>
                <div class="form-input">
                   <textarea id="pesan" name="pesan" class="form-textarea" cols="30" rows="10"></textarea>
-               </div>
+                  <div class="validation"></div>   
+            </div>
             </li>
             <li class="form-line">
                <span class="red">
