--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <meta charset="UTF-8">
 <head>    
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
       <title>Register-Apply Member[Indonesian]</title>
       <!-- Style CSS/ -->
       <link rel="stylesheet" href="css/style.css" type="text/css">
