add all tooltip for input

--- a/index.html
+++ b/index.html
@@ -199,11 +199,11 @@
                      </span>
                </label>
                <div class="form-input">
-                  <input type="text" class="form-textbox bounceIn animated" name="nama_facebook" id="nama_facebook">
+                  <input type="text" class="form-textbox tooltipster-custom bounceIn animated" name="nama_facebook" id="nama_facebook" title="isi (-) jika tidak ada">
                   <div class="form-sub-label mb">
                      Nama Facebook
                   </div>
-                  <input type="text" class="form-textbox bounceIn animated" name="email_facebook" id="email_facebook">
+                  <input type="text" class="form-textbox tooltipster-custom bounceIn animated" name="email_facebook" id="email_facebook" title="isi (-) jika tidak ada">
                   <div class="form-sub-label">
                      Email Facebook
                   </div>
@@ -217,7 +217,7 @@
                      </span>
                </label>
                <div class="form-input">
-                  <input type="text" class="form-textbox bounceIn animated" name="nama_instagram" id="nama_instagram">
+                  <input type="text" class="form-textbox tooltipster-custom bounceIn animated" name="nama_instagram" id="nama_instagram" title="isi (-) jika tidak ada">
                   <div class="validation"></div>
                </div>
             </li>
@@ -229,7 +229,7 @@
                      </span>
                </label>
                <div class="form-input">
-                  <input type="text" class="form-textbox bounceIn animated" name="nama_twitter" id="nama_twitter">
+                  <input type="text" class="form-textbox tooltipster-custom bounceIn animated" name="nama_twitter" id="nama_twitter" title="isi (-) jika tidak ada">
                   <div class="validation"></div>  
             </div>
             </li>
@@ -265,7 +265,7 @@
                      </span>
                </label>
                <div class="form-input">
-                  <input type="text" class="form-textbox bounceIn animated" name="jenis_alat" id="jenis_alat">
+                  <input type="text" class="form-textbox tooltipster-custom bounceIn animated" name="jenis_alat" id="jenis_alat" title="isi (-) jika tidak ada">
                   <div class="validation"></div>   
             </div>
             </li>
@@ -277,7 +277,7 @@
                      </span>
                </label>
                <div class="form-input">
-                  <input type="text" class="form-textbox bounceIn animated" name="tanggal" id="tanggal">
+                  <input type="text" class="form-textbox tooltipster-custom bounceIn animated" name="tanggal" id="tanggal" title="isi (-) jika tidak ada">
                   <div class="validation"></div>   
             </div>
             </li>
@@ -289,7 +289,7 @@
                      </span>
                </label>
                <div class="form-input">
-                  <input type="text" class="form-textbox bounceIn animated" name="acara" id="acara">
+                  <input type="text" class="form-textbox tooltipster-custom bounceIn animated" name="acara" id="acara" title="isi (-) jika tidak ada">
                   <div class="validation"></div>
                </div>
             </li>
@@ -354,7 +354,7 @@
                      </span>
                </label>
                <div class="form-input">
-                  <input type="text" class="form-textbox bounceIn animated" name="mengetahui_zenon" id="mengetahui_zenon">
+                  <input type="text" class="form-textbox tooltipster-custom bounceIn animated" name="mengetahui_zenon" id="mengetahui_zenon" title="isi (-) jika tidak ada">
                   <div class="validation"></div>
                   <div class="form-sub-label">
                      jika dari teman, tulis nama teman, jika teman anda member Zenon maka infokan ke-kami (agar cepat approve)
@@ -369,7 +369,7 @@
                      </span>
                </label>
                <div class="form-input">
-                  <input type="text" class="form-textbox bounceIn animated" name="sewa" id="sewa">
+                  <input type="text" class="form-textbox tooltipster-custom bounceIn animated" name="sewa" id="sewa" title="isi (-) jika tidak ada">
                   <div class="form-sub-label mb">
                      Nama tempat sewa Sebelumnnya
                   </div>
@@ -415,7 +415,7 @@
                      </span>
                </label>
                <div class="form-input">
-                  <input type="text" class="form-textbox bounceIn animated" name="nama_keluarga" id="nama_keluarga">
+                  <input type="text" class="form-textbox tooltipster-custom bounceIn animated" name="nama_keluarga" id="nama_keluarga" title="isi (-) jika tidak ada">
                   <div class="validation"></div>
                   <div class="form-sub-label">
                      Keluarga yang dapat dan atau bersedia menjamin nama baik anda dan siap diminta bantuan saat ada masalah dengan anda
@@ -430,7 +430,7 @@
                      </span>
                </label>
                <div class="form-input">
-                  <input type="text" class="form-textbox bounceIn animated" name="hubungan_penyewa" id="hubungan_penyewa">
+                  <input type="text" class="form-textbox tooltipster-custom bounceIn animated" name="hubungan_penyewa" id="hubungan_penyewa" title="isi (-) jika tidak ada">
                   <div class="validation"></div>   
             </div>
             </li>
@@ -442,7 +442,7 @@
                      </span>
                </label>
                <div class="form-input">
-                  <input type="text" class="form-textbox bounceIn animated" name="hp" id="hp">
+                  <input type="text" class="form-textbox tooltipster-custom bounceIn animated" name="hp" id="hp" title="isi (-) jika tidak ada">
                   <div class="validation"></div>   
             </div>
             </li>
@@ -454,7 +454,7 @@
                      </span>
                </label>
                <div class="form-input">
-                  <input type="text" class="form-textbox bounceIn animated" name="alamat_keluarga" id="alamat_keluarga">
+                  <input type="text" class="form-textbox tooltipster-custom bounceIn animated" name="alamat_keluarga" id="alamat_keluarga" title="isi (-) jika tidak ada">
                   <div class="validation"></div>   
             </div>
             </li>
@@ -495,7 +495,7 @@
                      </span>
                </label>
                <div class="form-input">
-                  <input type="text" class="form-textbox bounceIn animated" name="pekerjaan_sekarang" id="pekerjaan_sekarang">
+                  <input type="text" class="form-textbox tooltipster-custom bounceIn animated" name="pekerjaan_sekarang" id="pekerjaan_sekarang" title="isi (-) jika tidak ada">
                   <div class="validation"></div>   
             </div>
             </li>
@@ -507,7 +507,7 @@
                      </span>
                </label>
                <div class="form-input">
-                  <input type="text" class="form-textbox bounceIn animated" name="nama_tmpt_kerja" id="nama_tmpt_kerja">
+                  <input type="text" class="form-textbox tooltipster-custom bounceIn animated" name="nama_tmpt_kerja" id="nama_tmpt_kerja" title="isi (-) jika tidak ada">
                   <div class="validation"></div>   
             </div>
             </li>
@@ -519,7 +519,7 @@
                      </span>
                </label>
                <div class="form-input">
-                  <input type="text" class="form-textbox bounceIn animated" name="jabatan_kerja" id="jabatan_kerja">
+                  <input type="text" class="form-textbox tooltipster-custom bounceIn animated" name="jabatan_kerja" id="jabatan_kerja" title="isi (-) jika tidak ada">
                   <div class="validation"></div>   
             </div>
             </li>
@@ -531,7 +531,7 @@
                      </span>
                </label>
                <div class="form-input">
-                  <input type="text" class="form-textbox bounceIn animated" name="alamat_tmpt_kerja" id="alamat_tmpt_kerja">
+                  <input type="text" class="form-textbox tooltipster-custom bounceIn animated" name="alamat_tmpt_kerja" id="alamat_tmpt_kerja" title="isi (-) jika tidak ada">
                   <div class="validation"></div>  
             </div>
             </li>
@@ -543,7 +543,7 @@
                      </span>
                </label>
                <div class="form-input">
-                  <input type="text" class="form-textbox bounceIn animated" name="telepon_tmpt_kerja" id="telepon_tmpt_kerja">
+                  <input type="text" class="form-textbox tooltipster-custom bounceIn animated" name="telepon_tmpt_kerja" id="telepon_tmpt_kerja" title="isi (-) jika tidak ada">
                   <div class="validation"></div>   
             </div>
             </li>
@@ -590,7 +590,7 @@
                      </span>
                </label>
                <div class="form-input">
-                  <input type="text" class="form-textbox bounceIn animated" name="alamat_tinggal_skrng" id="alamat_tinggal_skrng">
+                  <input type="text" class="form-textbox tooltipster-custom bounceIn animated" name="alamat_tinggal_skrng" id="alamat_tinggal_skrng" title="isi (-) jika tidak ada">
                   <div class="validation"></div>   
             </div>
             </li>
@@ -620,7 +620,7 @@
                      </span>
                </label>
                <div class="form-input">
-                  <input type="text" class="form-textbox bounceIn animated" name="nama_pemilik" id="nama_pemilik">
+                  <input type="text" class="form-textbox tooltipster-custom bounceIn animated" name="nama_pemilik" id="nama_pemilik" title="isi (-) jika tidak ada">
                   <div class="validation"></div>  
             </div>
             </li>
@@ -632,7 +632,7 @@
                      </span>
                </label>
                <div class="form-input">
-                  <input type="text" class="form-textbox bounceIn animated" name="telepon_pemilik" id="telepon_pemilik">
+                  <input type="text" class="form-textbox tooltipster-custom bounceIn animated" name="telepon_pemilik" id="telepon_pemilik" title="isi (-) jika tidak ada">
                   <div class="validation"></div>   
             </div>
             </li>
@@ -690,7 +690,7 @@
                      </span>
                </label>
                <div class="form-input">
-                  <input type="text" class="form-textbox bounceIn animated" name="nama_lembaga" id="nama_lembaga">
+                  <input type="text" class="form-textbox tooltipster-custom bounceIn animated" name="nama_lembaga" id="nama_lembaga" title="isi (-) jika tidak ada">
                   <div class="validation"></div>   
             </div>
             </li>
@@ -702,7 +702,7 @@
                      </span>
                </label>
                <div class="form-input">
-                  <input type="text" class="form-textbox bounceIn animated" name="alamat_lembaga" id="alamat_lembaga">
+                  <input type="text" class="form-textbox tooltipster-custom bounceIn animated" name="alamat_lembaga" id="alamat_lembaga" title="isi (-) jika tidak ada">
                   <div class="validation"></div>   
             </div>
             </li>
@@ -714,7 +714,7 @@
                      </span>
                </label>
                <div class="form-input">
-                  <input type="text" class="form-textbox tada animated" name="info_tambahan" id="info_tambahan">
+                  <input type="text" class="form-textbox tooltipster-custom tada animated" name="info_tambahan" id="info_tambahan" title="isi (-) jika tidak ada">
                   <div class="validation"></div>   
             </div>
             </li>
