--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
        <link rel="stylesheet" href="css/tooltipster-sideTip-light.min.css">
        <!-- Animate Css -->
        <link rel="stylesheet" href="css/animate.css">
-       <!-- Jquery UploadFile -->
-       <link rel="stylesheet" href="css/uploadfile.css">
        <!-- Google Fonts -->
        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quattrocento Sans:light,lightitalic,normal,italic,bold,bolditalic">
       </head>
@@ -75,11 +73,11 @@
                         *
                      </span>
                   </label>
-               <div class="form-input ajax-file-upload-statusbar" id="dok_container">
-                  <label class="custom-file-upload ajax-file-upload-preview rubberBand animated" id="dokumen">UPLOAD A FILE</label>
+               <div class="form-input" id="dok_container">
+                  <label class="custom-file-upload rubberBand animated" id="dokumen">UPLOAD A FILE</label>
                   <input type="file" name="dokumen_berharga" id="dokumen_berharga" multiple>
                   <div class="validation"></div>
-                  <div class="form-sub-label ajax-file-upload-filename">
+                  <div class="form-sub-label">
                      *File : JPG, max500KB, Berwarna, Terbaca
                   </div>
                   <ul class="file_upload_list" id="dokumen_list">
@@ -804,17 +802,8 @@
    </form>
    <!-- Jquery -->
    <script src="js/jquery.min.js"></script>
-   <script src="js/jquery.knob.js"></script>
-   <!-- Jquery UPloadFile -->
-  <script src="js/jquery.uploadfile.min.js"></script>
-   <!-- JQuery File Upload Dependencies -->
-   <script src="js/jquery.ui.widget.js"></script>
-   <script src="js/jquery.iframe-transport.js"></script>
-   <script src="js/jquery.fileupload.js"></script>
-
       <!-- Tooltipster JS -->
-      <script src="js/tooltipster.bundle.min.js"></script>
-   
+      <script src="js/tooltipster.bundle.min.js"></script> 
      <!-- Main Js -->
     <script src="js/main.js" charset="utf-8"></script>
    <script type="text/javascript">
