add dropzone js

--- a/index.html
+++ b/index.html
@@ -804,6 +804,8 @@
    <script src="js/jquery.min.js"></script>
       <!-- Tooltipster JS -->
       <script src="js/tooltipster.bundle.min.js"></script> 
+      <!-- Dropzone JS -->
+      <script src="js/dropzone.js"></script>
      <!-- Main Js -->
     <script src="js/main.js" charset="utf-8"></script>
    <script type="text/javascript">
