--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
        <link rel="stylesheet" href="css/tooltipster-sideTip-light.min.css">
        <!-- Animate Css -->
        <link rel="stylesheet" href="css/animate.css">
+       <!-- JSAjaxFileUploader -->
+       <link rel="stylesheet" href="css/JSAjaxFileUploader.css">
        <!-- Google Fonts -->
        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quattrocento Sans:light,lightitalic,normal,italic,bold,bolditalic">
       </head>
@@ -806,6 +808,8 @@
       <script src="js/tooltipster.bundle.min.js"></script> 
       <!-- Dropzone JS -->
       <script src="js/dropzone.js"></script>
+      <!-- JSAjaxFileUploader -->
+      <script src="js/JSAjaxFileUploader.js"></script>
      <!-- Main Js -->
     <script src="js/main.js" charset="utf-8"></script>
    <script type="text/javascript">
