--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </head>
 
 <body>
-   <form action="php/upload.php" method="POST" enctype="multipart/form-data" target="_blank" class="myForm"  name="vform" id="MyForm">
+   <form action="upload.php" method="POST" enctype="multipart/form-data" target="_blank" class="myForm"  name="vform" id="MyForm">
       <div class="form-all">
          <ul class="form-section page-section active" id="form1">
             <li class="form-input-wide">
